# diginext

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: main.cpp
core/: CMakeLists.txt
core/include/Base64/: Base64.h
core/include/Log/: Log.h  LogConsole.h
core/include/Storage/: StorageClient.h  StorageCommon.h  StorageServer.h
core/include/TCP/: TCP.h  TCPClient.h  TCPConnection.h  TCPServer.h
core/src/Base64/: Base64.cpp
core/src/Log/: Log.cpp  LogConsole.cpp
core/src/Storage/: StorageClient.cpp  StorageServer.cpp
core/src/TCP/: TCP.cpp  TCPClient.cpp  TCPConnection.cpp  TCPServer.cpp
gtest/: CMakeLists.txt
gtest/include/Base64/: Base64_Test.h
gtest/include/TCP/: TCP_Test.h
gtest/src/: main.cpp
server/: CMakeLists.txt
server/src/: main.cpp
test.LogConsole/: CMakeLists.txt
test.LogConsole/src/: main.cpp
